anotações aula 1 AEDS1

--- a/Períodos/1º-período/AEDS1/anotações/1-2024.02.19.md
+++ b/Períodos/1º-período/AEDS1/anotações/1-2024.02.19.md
@@ -1,2 +1,22 @@
 
-# Teste
+# Algoritmos e Estrutura de Dados 1
+
+## Conceitos iniciais
+
+### Algoritmos:
+
+- Solução proposta sequencialmente ou em paralelo para resolver um problema
+- Pode ser estruturado como um passo a passo para resolver o problema (fluxograma, pseudocódigo, etc.)
+- Para que a solução possa ser executada, é preciso representá-la por uma convenção, a linguagem de máquina.
+- A geração de um executável é feita pelo compilador, também existem interpretadores, que executam o programa linha a linha.
+
+### Etapas do Desenvolvimento:
+
+1 - Análise:
+    - Identifica o problema a ser resolvido, as entradas necessárias e a partir delas, o processamento e saída. 
+
+2 - Elaboração:
+    - Define qual será a sequência de passos para resolver o problema.
+
+3 - Codificação:
+    - Representação do algoritmo em uma linguagem de programação.
