tentando arrumar identação

--- a/Períodos/1º-período/AEDS1/anotações/1-2024.02.19.md
+++ b/Períodos/1º-período/AEDS1/anotações/1-2024.02.19.md
@@ -12,11 +12,11 @@
 
 ### Etapas do Desenvolvimento:
 
-1 - Análise:
-    - Identifica o problema a ser resolvido, as entradas necessárias e a partir delas, o processamento e saída. 
+1. Análise:
+   - Identifica o problema a ser resolvido, as entradas necessárias e a partir delas, o processamento e saída. 
 
-2 - Elaboração:
-    - Define qual será a sequência de passos para resolver o problema.
+2. Elaboração:
+   - Define qual será a sequência de passos para resolver o problema.
 
-3 - Codificação:
-    - Representação do algoritmo em uma linguagem de programação.
+3. Codificação:
+   - Representação do algoritmo em uma linguagem de programação.
