--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -4,6 +4,4 @@
 
 ##### 1º grau
 
-\begin{equation}
-	C^i_j= {\textstyle \sum_k} A^i_k B^k_j
-\end{equation}
+	$C^i_j= {\textstyle \sum_k} A^i_k B^k_j$
