--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -4,4 +4,7 @@
 
 ##### 1º grau
 
-	$C^i_j= {\textstyle \sum_k} A^i_k B^k_j$
+A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a != 0$
+Sabendo disso podemos isolar o $x$ da equação
+$$ax = -b$$
+$$a = -x/a$$
