--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -5,6 +5,9 @@
 ##### 1º grau
 
 A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a != 0$
-Sabendo disso podemos isolar o $x$ da equação
+
+Sabendo disso, podemos isolar o $x$ da equação:
+
+$$ax + b = 0$$
 $$ax = -b$$
 $$a = -x/a$$
