--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -1,13 +1,15 @@
 # Propriedades e Solução de Equações e Inequações
 
-### Equações
+## Equações
 
-##### 1º grau
+### 1º grau
 
-A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a != 0$
+A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a != 0$.
 
 Sabendo disso, podemos isolar o $x$ da equação:
 
 $$ax + b = 0$$
 $$ax = -b$$
-$$a = -x/a$$
+$$x = -b/a$$
+
+Bem simples e direto.
