adicionar mais anotações

--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -4,7 +4,7 @@
 
 ### 1º grau
 
-A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a != 0$.
+A equação do primeiro grau pode ser representada pela seguinte expressão: $ax+b=0$, onde $a \neq 0$.
 
 Sabendo disso, podemos isolar o $x$ da equação:
 
@@ -15,3 +15,23 @@ $$ax = -b$$
 $$x = -b/a$$
 
 Bem simples e direto.
+
+### 2º grau
+
+A equação do primeiro grau pode ser representada pela seguinte expressão: $ax^2 + bx^2 + c = 0$, onde $a \neq 0$.
+
+Para isolar o $x$, primeiramente tiramos o $a$ de $ax^2$.
+
+$$ax^2 + (bx)/a + c/a = 0$$
+
+Para continuarmos, precisamos completar o quadrado da equação. Compare nossa equação com o seguinte produto notável:
+
+$$(x+k)^2 = x^2 + 2xk + k^2$$
+
+Percebe que não falta muito para a equação ser um quadrado perfeito? $x^2 + (bx)/a + (b/2a)^2$
+
+Sabendo disso, adicionamos e subtraímos $(b/a)^2$ da equação, para não prejudicar a igualdade. Fatorando o produto notável.
+
+$$x^2 + (bx)/a + (b/2a)^2 - (b/2a)^2 + c/a = 0$$
+
+$$(x+b/(2a))^2 = b^2/4*a^2$$
