final day commit

--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -32,6 +32,14 @@ Percebe que não falta muito para a equação ser um quadrado perfeito? $x^2 + \
 
 Sabendo disso, adicionamos e subtraímos $(b/a)^2$ da equação, para não prejudicar a igualdade. Fatorando o produto notável.
 
-$$x^2 + \frac{bx}{a} + (\frac{b}{2a})^2 - (\frac{b}{2a})^2(b/2a) + \frac{c}{a} = 0$$
+$$x^2 + \frac{bx}{a} + (\frac{b}{2a})^2 - (\frac{b}{2a})^2 + \frac{c}{a} = 0$$
 
-$$(\frac{x+b}{2a})^2 = \frac{b}{4*a})^2$$
+$$(\frac{x+b}{2a})^2 = (\frac{b}{2a})^2 - \frac{c}{a}$$
+
+Após a fatoração, podemos continuar o desenvolvimento
+
+$$(\frac{x+b}{2a})^2 = \frac{b^2}{2a^2} - \frac{c}{a}$$
+
+$$\sqrt{(\frac{x+b}{2a})^2} = \sqrt{\frac{b^2}{2a^2}} - \sqrt{\frac{c}{a}}$$
+
+$$|\frac{x+b}{2a}| = \sqrt{\frac{b^2-4ac}{}}$$
