--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -30,16 +30,55 @@ $$(x+k)^2 = x^2 + 2xk + k^2$$
 
 Percebe que não falta muito para a equação ser um quadrado perfeito? $x^2 + \frac{bx}{a} + (\frac{b}{2a})^2$
 
-Sabendo disso, adicionamos e subtraímos $(b/a)^2$ da equação, para não prejudicar a igualdade. Fatorando o produto notável.
+Sabendo disso, adicionamos e subtraímos $(b/a)^2$ da equação, para não prejudicar a igualdade. Assim transformando a equação em um quadrado perfeito.
 
 $$x^2 + \frac{bx}{a} + (\frac{b}{2a})^2 - (\frac{b}{2a})^2 + \frac{c}{a} = 0$$
 
-$$(\frac{x+b}{2a})^2 = (\frac{b}{2a})^2 - \frac{c}{a}$$
+$$(x+\frac{b}{2a})^2 = (\frac{b}{2a})^2 - \frac{c}{a}$$
 
 Após a fatoração, podemos continuar o desenvolvimento
 
-$$(\frac{x+b}{2a})^2 = \frac{b^2}{2a^2} - \frac{c}{a}$$
+$$(x+\frac{b}{2a})^2 = \frac{b^2}{2a^2} - \frac{c}{a}$$
 
-$$\sqrt{(\frac{x+b}{2a})^2} = \sqrt{\frac{b^2}{2a^2}} - \sqrt{\frac{c}{a}}$$
+$$\sqrt{(x+\frac{b}{2a})^2} = \sqrt{\frac{b^2}{2a^2}} - \sqrt{\frac{c}{a}}$$
 
-$$|\frac{x+b}{2a}| = \sqrt{\frac{b^2-4ac}{}}$$
+$$|x+\frac{b}{2a}| = \sqrt{\frac{b^2-4ac}{-4a^2}}$$
+
+$$x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}$$
+
+Terminando o desenvovlvimento, chegamos na equação de solução de equações do segundo grau.
+
+### outras equações
+
+Resolver equações de 3º, 4º grau a diante é uma tarefa tediosa e desnecessariamente grande que não deve ser calculada manualmente, por isso veremos apenas os casos mais simples.
+
+### Possibilidade 1
+
+Uma possível maneira de solucionar equações do tipo é através da fatoração. Tenha como exemplo a seguinte equação:
+
+$$x^3 - 2x = 0$$
+
+É possível colocar o $x$ em evidência:
+
+$$x(x^2-2) = 0$$
+
+Sabendo que o resultado é 0, a multiplicão deve ser zerada. O que quer dizer que $x = 0$ ou $x^2-2=0$. Resolvendo as equações, chegamos em:
+
+$$x^2-2=0$$
+
+$$x^2=-2$$
+
+$$\sqrt{x^2}=\sqrt{2}$$
+
+$$|x|=\sqrt{2}$$
+
+$$x=\pm\sqrt{2}$$
+
+Com isso, chegamos na conclusão de que $x$ pode ser $0$ ou $\pm\sqrt{2}$.
+
+### Possibilidade 2
+
+## Inequações
+
+### 1º grau
+
