--- a/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/1-2024.02.20.md
@@ -48,11 +48,11 @@ $$x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}$$
 
 Terminando o desenvovlvimento, chegamos na equação de solução de equações do segundo grau.
 
-### outras equações
+### Outras equações
 
 Resolver equações de 3º, 4º grau a diante é uma tarefa tediosa e desnecessariamente grande que não deve ser calculada manualmente, por isso veremos apenas os casos mais simples.
 
-### Possibilidade 1
+#### Possibilidade 1
 
 Uma possível maneira de solucionar equações do tipo é através da fatoração. Tenha como exemplo a seguinte equação:
 
@@ -66,7 +66,7 @@ Sabendo que o resultado é 0, a multiplicão deve ser zerada. O que quer dizer q
 
 $$x^2-2=0$$
 
-$$x^2=-2$$
+$$x^2=2$$
 
 $$\sqrt{x^2}=\sqrt{2}$$
 
@@ -76,9 +76,58 @@ $$x=\pm\sqrt{2}$$
 
 Com isso, chegamos na conclusão de que $x$ pode ser $0$ ou $\pm\sqrt{2}$.
 
-### Possibilidade 2
+#### Possibilidade 2
+
+$$x^4+3x^2+2=0$$
+
+Nessa situação, podemos associar uma nova variável com o valor de x^2, essencialmente convertendo a equação para uma de 2º grau. $Y = x^2$
+
+$$Y^2 + 3Y + 2 = 0$$
+
+$$Y = \frac{-3\pm\sqrt{3^2-4*1*2}}{2*2}$$
+
+$$Y = \frac{-3\pm\sqrt{1}}{2}$$
+
+Com isso, chegamos eu duas possíveis respostas:
+
+$$Y = -2$$
+
+ou
+
+$$Y = -1$$
+
+Voltando para a equação inicial, constatamos que é impossível que $Y = X^2 = -2$ ou $Y = X^2 = -1$.
+
+Logo, a equação não possui raízes reais.
 
 ## Inequações
 
 ### 1º grau
 
+Inequações do 1º grau seguirão o seguinte formato:
+
+$$ax+b<0$$
+
+Desenvolvendo:
+
+$$ax < -b$$
+
+Se $a>0$, podemos fazer a seguinte operação:
+
+$$a < \frac{-b}{a}$$
+
+$$S = {-\infty, \frac{-b}{a}}$$
+
+Se $a<0$, o sentido da inequação deverá mudar
+
+$$a > \frac{-b}{a}$$
+
+$$S = {\frac{-b}{a}, \infty}$$
+
+**Em uma inequação, só podemos retirar um número que multiplica $x$ se soubermos se o número é negativo ou positivo, já que isso muda a solução e sentido da inequação**
+
+### 2º grau
+
+$$ax^2+bx+c < 0$$
+
+Para a solução de inequações do segundo grau, existem dois métodos.
