--- a/Periodos/1º-periodo/Calculo1/anotacoes/2-2024.02.27.md
+++ b/Periodos/1º-periodo/Calculo1/anotacoes/2-2024.02.27.md
@@ -30,7 +30,7 @@ Com tais informações, podemos constatar que na reta $(x + 1)$ todos os valores
 
 Já na reta $(x - 1)$, todos os valores menores que $+1$ são negativos, e todos maiores positivos.
 
-Cruzando essas informações, notamos que o único local que uma reta tem a polaridade distinta da outra é entre os valores de $-1 e +1$, assim chegamos na seguinte solução:
+Cruzando essas informações, notamos que o único local que uma reta tem a polaridade distinta da outra é entre os valores de $-1$ e $+1$, assim chegamos na seguinte solução:
 
 $$S = ]-1, 1[$$
 
