adicionar referências da biblioteca math.h

--- a/Periodos/1o-periodo/AED1/anotacoes/2-2024.02.04.md
+++ b/Periodos/1o-periodo/AED1/anotacoes/2-2024.02.04.md
@@ -54,3 +54,7 @@ Essa tábela contém todas as operações e seus respectivos operadores em C:
 | Divisão       | /        |
 | Multiplicação | *        |
 | Resto inteiro | %        |
+
+Demais conceitos matemáticos são encontrados na biblioteca padrão 'math.h' da linguagem.
+
+(Documentação math.h em português)[https://linguagemc.com.br/a-biblioteca-math-h/]
