--- a/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
+++ b/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
@@ -1,8 +1,8 @@
-# Funções polinomais
+# Funções polinomais e domínio
 
-Dizemos que uma função $P(x)$ é uma função polinomial se existem uma constante N natural e coeficientes $a_0, a_1, a_2, \cdots, a_n$ reais tais que:
+Dizemos que uma função $P(x)$ é uma função polinomial se existem uma constante N natural, coeficientes $a_0, a_1, a_2, \cdots, a_n$ reais e exponenciais inteiros da variável x tais que:
 
-$$P(x) = a_nx^n+a_{n-1}x^{n-1}+/cdots+a_2x^2+a_1x+a_o$$
+$$P(x) = a_nx^n+a_{n-1}x^{n-1}+...+a_2x^2+a_1x+a_o$$
 
 Onde $a_n$ é chamado de **coeficiente principal** da função polinomial de **grau n**.
 
@@ -15,4 +15,20 @@ Onde $a_n$ é chamado de **coeficiente principal** da função polinomial de **g
 | Função de 1º grau (linear)        | $f(x)=ax+b$                   | 1          |
 | Função de 2º grau (quadrática)    | $f(x)=ax^2+bx+c$              | 2          |
 | Função de 3º grau (cúbica)        | $f(x)=ax^3+bx^2+cx+d$         | 3          |
-| Função de nº grau (grau superior) | $f(x)=a_n*x^n+\cdots+a_0*x^0$ | N          |
+| Função de nº grau (grau superior) | $f(x)=a_n*x^n+...+a_0*x^0$    | N          |
+
+## Domínio
+
+Toda função polinomial P(x) (independente do grau) é definida para todos os números reais.
+
+Ou seja, seu conjunto de domínio é o conjunto real.
+
+$$Dp(x) = \mathbb{R} = (-\infty, \infty)$$
+
+Já que as operações matemáticas (soma, subtração, produto, potência) envolvidas na representação algébrica do polinômio não possuem restrições.
+
+### Funções constantes
+
+Funções constantes são funções polinomiais de grau zero, que podem ser escritas na forma:
+
+$$f(x)=1 \text{ou} y=a, \texto{onde} a\ne0
