--- a/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
+++ b/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
@@ -31,4 +31,4 @@ Já que as operações matemáticas (soma, subtração, produto, potência) envo
 
 Funções constantes são funções polinomiais de grau zero, que podem ser escritas na forma:
 
-$$f(x)=1 ou y=a, onde a\ne0
+$$f(x)=1 ou y=a, onde a\ne0$$
