commit final do dia

--- a/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
+++ b/Periodos/1o-periodo/Calculo1/anotacoes/3-2024.03.05.md
@@ -32,3 +32,13 @@ Já que as operações matemáticas (soma, subtração, produto, potência) envo
 Funções constantes são funções polinomiais de grau zero, que podem ser escritas na forma:
 
 $$f(x)=1 \text{ ou } y=a, \text{ onde } a\ne0$$
+
+E define, graficamente, uma reta horizontal que intercepta o eixo y em $y=a$.
+
+### Funções lineares
+
+Uma função linear é uma função polinomial de 1º grau da forma:
+
+$$f(x)=ax+b\text{ ou } y=ax_b$$
+
+Definem, graficamente, retas inclinadas.
